tests/errors/type_mismatch_greater_than.sp
# Test greater than comparison type mismatch
pub result = "hello" > 42